# barse

./: .gitignore  Cargo.toml  README.md  profile.sh
.github/workflows/: test-barse.yml
examples/: fast.rs  find_good_hash.rs  hash_quality.rs  perfect_hash.rs  temp_parse.rs
src/: barse.rs  build_table.rs  build_table_mt.rs  error.rs  hugepage_backed_table.rs  inline_string.rs  inline_string_mt.rs  lib.rs  main.rs  print_summary.rs  scanner.rs  scanner_cache.rs  scanner_cache_x86.rs  scanner_generic.rs  scanner_x86_64.rs  shared_table.rs  slicer.rs  str_arena.rs  str_cmp_x86.rs  str_hash.rs  str_hash_x86.rs  string_table.rs  table.rs  table_entry.rs  temperature_reading.rs  temperature_summary.rs  temperature_summary_mt.rs  temperature_summary_table.rs  test_against_simple_parser.rs  test_util.rs  util.rs
