[package]
name = "barse"
version = "0.1.0"
edition = "2024"

[features]
profiled = ["dep:pprof"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
itertools = "0.14.0"
libc = "0.2.178"
memmap2 = "0.9.9"
pprof = { version = "0.15.0", features = ["flamegraph"], optional = true }
rand = "0.9.2"

[profile.test]
inherits = "dev"
opt-level = 1

[profile.release]
debug-assertions = false
overflow-checks = false
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[profile.inspect]
inherits = "release"
debug = 2
strip = "none"

[profile.profiled]
inherits = "release"
opt-level = 3
debug = 2
strip = "none"
lto = "none"

[dev-dependencies]
brc = { git = "https://github.com/ClaytonKnittel/1brc", rev = "50a3fa9723972b70da37af6600b2804adbc87432" }
googletest = "0.14.2"
